# docx-editingtime-editor

./: Cargo.toml  README.md
.github/workflows/: release-web.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
editor_core/: Cargo.toml
src/: main.rs
web/: Cargo.toml
web/src/: lib.rs
web/static/: index.html
