[package]
name = "web"
version = "0.1.0"
edition = "2024"
authors = ["yanorei32 <yanorei@hotmail.co.jp>"]
repository = "https://github.com/yanorei32/docx-editing-time-editor"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.122"
js-sys = "0.3.99"
editor_core = { path = "../editor_core/" }

[profile.release]
opt-level = "s"
